CO-127: Verify button text transform as per addToBag btn.

--- a/docroot/themes/custom/transac/alshaya_boots/alshaya_boots.info.yml
+++ b/docroot/themes/custom/transac/alshaya_boots/alshaya_boots.info.yml
@@ -226,3 +226,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css: css/conditional-sass/advanced-page-paragraph-accordion/advanced-page-paragraph-accordion.ltr.css
+
+  alshaya_white_label/checkout-cod-mobile-verification:
+    css:
+      theme:
+        css/conditional-sass/checkout-cod-mobile-verification/checkout-cod-mobile-verification.ltr.css: css/conditional-sass/checkout-cod-mobile-verification/checkout-cod-mobile-verification.ltr.css
