CORE-44990: Fixed the typo as per the PR feedback.

--- a/docroot/modules/custom/alshaya_tamara/alshaya_tamara.libraries.yml
+++ b/docroot/modules/custom/alshaya_tamara/alshaya_tamara.libraries.yml
@@ -1,4 +1,4 @@
-tamara_instalment_plan:
+tamara_installment_plan:
   js:
     https://cdn.tamara.co/widget/installment-plan.min.js: { type: external }
 
@@ -7,4 +7,4 @@ tamara_checkout:
   js:
     js/tamara_checkout.js: { }
   dependencies:
-    - alshaya_tamara/tamara_instalment_plan
+    - alshaya_tamara/tamara_installment_plan
