--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.info.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/alshaya_rcs_product.info.yml
@@ -6,6 +6,7 @@ core_version_requirement: ^8 || ^9
 dependencies:
   - alshaya_rcs_magento_placeholders:alshaya_rcs_magento_placeholders
   - rcs_handlebars:rcs_handlebars
+  - alshaya_rcs_handlebars:alshaya_rcs_handlebars
   - alshaya_acm_product:alshaya_acm_product
   - alshaya_spc:alshaya_spc
   - alshaya_custom:alshaya_custom
