CORE-45000: Cart drawer feature for alo yoga.

--- a/docroot/modules/react/alshaya_spc/alshaya_spc.libraries.yml
+++ b/docroot/modules/react/alshaya_spc/alshaya_spc.libraries.yml
@@ -15,6 +15,13 @@ mini_cart:
   dependencies:
     - alshaya_react/react
 
+cart_drawer:
+  version: 1.x
+  js:
+    dist/cartdrawer.bundle.js: { }
+  dependencies:
+    - alshaya_react/react
+
 cart:
   version: 1.x
   js:
