--- a/docroot/modules/react/alshaya_spc/alshaya_spc.services.yml
+++ b/docroot/modules/react/alshaya_spc/alshaya_spc.services.yml
@@ -82,3 +82,8 @@ services:
     class: Drupal\alshaya_spc\Helper\AlshayaSpcHelper
     arguments:
       - '@config.factory'
+
+  alshaya_spc.cart_notification_helper:
+    class: Drupal\alshaya_spc\Helper\CartNotificationHelper
+    arguments:
+      - '@config.factory'
