CORE-45163: Add magento integration configs and add rcs module for NB.

--- a/blt/alshaya_local_sites.yml
+++ b/blt/alshaya_local_sites.yml
@@ -343,30 +343,30 @@ sites:
     type: alshaya_transac
     country: jo
   nbkw:
-    module: alshaya_nb
+    module: alshaya_nb_transac_rcs
     type: alshaya_transac
     country: kw
   nbsa:
-    module: alshaya_nb
+    module: alshaya_nb_transac_rcs
     type: alshaya_transac
     country: sa
   nbae:
-    module: alshaya_nb
+    module: alshaya_nb_transac_rcs
     type: alshaya_transac
     country: ae
   nbeg:
-    module: alshaya_nb
+    module: alshaya_nb_transac_rcs
     type: alshaya_transac
     country: eg
   nbbh:
-    module: alshaya_nb
+    module: alshaya_nb_transac_rcs
     type: alshaya_transac
     country: bh
   nbqa:
-    module: alshaya_nb
+    module: alshaya_nb_transac_rcs
     type: alshaya_transac
     country: qa
   nbjo:
-    module: alshaya_nb
+    module: alshaya_nb_transac_rcs
     type: alshaya_transac
     country: jo
