CORE-44605: Implementation Approach for checkout progress tracker [Alo Yoga].

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -868,3 +868,8 @@ plp-quick-add:
   css:
     theme:
       css/conditional-sass/plp-quick-add/plp-quick-add.ltr.css: {}
+
+checkout-steps:
+  css:
+    theme:
+      css/conditional-sass/checkout-steps/checkout-steps.ltr.css: {}
