CORE-44605: Implementation Approach for checkout progress tracker [Alo Yoga].

--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -869,7 +869,7 @@ plp-quick-add:
     theme:
       css/conditional-sass/plp-quick-add/plp-quick-add.ltr.css: {}
 
-checkout-steps:
+checkout-tracker:
   css:
     theme:
-      css/conditional-sass/checkout-steps/checkout-steps.ltr.css: {}
+      css/conditional-sass/checkout-tracker/checkout-tracker.ltr.css: {}
