--- a/docroot/modules/custom/alshaya_security/alshaya_security.info.yml
+++ b/docroot/modules/custom/alshaya_security/alshaya_security.info.yml
@@ -8,3 +8,5 @@ dependencies:
   - autologout:autologout
   - drupal:language
   - pcb:pcb
+  - rate_limits:rate_limits
+  - user_password_limit:user_password_limit
