--- a/docroot/modules/custom/alshaya_security/alshaya_security.services.yml
+++ b/docroot/modules/custom/alshaya_security/alshaya_security.services.yml
@@ -24,3 +24,8 @@ services:
       - { name: cache.bin, default_backend: cache.backend.permanent_database }
     factory: cache_factory:get
     arguments: [user_used_hash]
+
+  alshaya_security.route_subscriber:
+    class: Drupal\alshaya_security\Routing\RouteSubscriber
+    tags:
+      - { name: event_subscriber }
