--- a/docroot/themes/custom/transac/alshaya_new_balance/alshaya_new_balance.info.yml
+++ b/docroot/themes/custom/transac/alshaya_new_balance/alshaya_new_balance.info.yml
@@ -41,3 +41,8 @@ libraries-override:
     css:
       theme:
         css/conditional-sass/font-face/font-face.ltr.css: css/conditional-sass/font-face/font-face.ltr.css
+
+  alshaya_white_label/store_finder:
+    css:
+      theme:
+        css/conditional-sass/store-finder/store-finder.ltr.css: css/conditional-sass/store-finder/store-finder.ltr.css
