CORE-43621: Removed handlebars package from docroot.

--- a/docroot/package.json
+++ b/docroot/package.json
@@ -36,7 +36,5 @@
   "resolutions": {
     "glob-parent": "^6.0.2"
   },
-  "dependencies": {
-    "handlebars": "^4.7.7"
-  }
+  "dependencies": {}
 }
