--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/kw/kw.yml
@@ -2,8 +2,8 @@ variables:
   spc_product_listing_page: '/shop-newborn-clothing/newborn-boys/bottoms/'
   spc_basket_page: '/shop-newborn-clothing/newborn-boys/bottoms/'
   product_listing_page_url: '/shop-newborn-clothing/newborn-boys/bottoms/'
-  spc_pdp_page: 'buy-helicopter-shortie-pyjamas-2-pack.html'
-  np_plp_product_page: '/buy-greentreat-boys-organic-cotton-loungewear-set-3.html/'
+  spc_pdp_page: '/buy-elle-girls-toddler-star-short-sleeve-babygrow-set.html/'
+  np_plp_product_page: '/buy-elle-girls-toddler-star-short-sleeve-babygrow-set.html/'
   np_plp_page: '/shop-boys-clothing/nightwear/pyjamas/'
   new_pdp_enabled: TRUE
   spc_egift_page: '/egift/'
