--- a/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/mc/env/prod/markets/sa/sa.yml
@@ -1,9 +1,10 @@
 variables:
-  url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
+  url_product_page: '/buy-mothercare-all-we-know-baby-liquid-talc-125ml.html/'
   spc_product_listing_page: '/shop-boys-clothing/tops/tee-polo/'
   spc_basket_page: '/shop-girls-clothing/accessories/jewelry/'
   product_listing_page_url: '/shop-boys-clothing/bottoms/denim/'
-  np_plp_product_page: '/buy-justice-swiss-embroidery-jumpsuit.html/'
-  spc_pdp_page: '/buy-justice-swiss-embroidery-jumpsuit.html/'
+  np_plp_product_page: '/buy-mothercare-all-we-know-baby-liquid-talc-125ml.html/'
+  spc_pdp_page: '/buy-mothercare-all-we-know-baby-liquid-talc-125ml.html/'
   np_plp_page: '/shop-girls-clothing/sets/sets/'
   new_pdp_enabled: TRUE
+  spc_egift_page: '/egift/'
