--- a/tests/behat/templates/variables/brands/muji/env/prod/markets/sa/sa.yml
+++ b/tests/behat/templates/variables/brands/muji/env/prod/markets/sa/sa.yml
@@ -1,10 +1,10 @@
 variables:
   spc_product_listing_page: '/shop-fashion-boxers-briefs/'
   spc_basket_page: '/shop-fashion-boxers-briefs/'
-  spc_pdp_page: '/buy-polyester-2-way-foldable-easy-close-umbrella-53-cm-black-black.html/'
+  spc_pdp_page: '/buy-stretch-jersey-leggings-full-length-charcoal-grey.html/'
   product_listing_page_url: "/shop-fashion-sneakers/"
   spc_plp_add_to_cart_single: '/shop-fashion-sneakers/'
   spc_promotion_listing_page: '//'
-  spc_single_product_detail_page_coupon: '/buy-polyester-2-way-foldable-easy-close-umbrella-53-cm-black-black.html/'
+  spc_single_product_detail_page_coupon: '/buy-stretch-jersey-leggings-full-length-charcoal-grey.html'
   spc_bank_product: '/shop-fashion-sneakers/'
   spc_egift_page: '/egift/'
