--- a/tests/behat/templates/variables/brands/vs/env/prod/markets/kw/kw.yml
+++ b/tests/behat/templates/variables/brands/vs/env/prod/markets/kw/kw.yml
@@ -1,6 +1,6 @@
 variables:
-  url_product_page: 'buy-slub-jersey-henley-shirt-green-grey-marl-0.html'
-  product_listing_page_url: 'beauty/shop-mist-body/categories/body-mists/'
+  url_product_page: '/victorias-secret/buy-natural-beauty-fragrance-mist-lavender-vanilla.html/'
+  product_listing_page_url: '/beauty/shop-mist-body/categories/body-mists/'
   spc_product_listing_page: '/beauty/shop-mist-body/categories/body-mists/'
   spc_pdp_page: '/victorias-secret/buy-natural-beauty-fragrance-mist-lavender-vanilla.html/'
   spc_basket_page: '/beauty/shop-mist-body/categories/body-mists/'
