--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/schema/alshaya_rcs_main_menu.settings.yml
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_main_menu/config/schema/alshaya_rcs_main_menu.settings.yml
@@ -10,3 +10,6 @@ alshaya_rcs_main_menu.settings:
     menu_max_depth:
       type: integer
       label: 'Main menu maximum depth'
+    max_depth_to_load:
+      type: integer
+      label: 'Depth of categories to fetch from GraphQL API'
