--- a/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
+++ b/docroot/themes/custom/transac/alshaya_white_label/alshaya_white_label.libraries.yml
@@ -863,3 +863,8 @@ megamenu-shop-by-filter:
   css:
     theme: 
       css/conditional-sass/megamenu-shop-by-filter/megamenu-shop-by-filter.ltr.css: {}
+
+tamara:
+  css:
+    theme:
+      css/conditional-sass/tamara/tamara.ltr.css: {}
