CORE-41085: Fix the placeholders and use tokens for slug. Fix URL in about.

--- a/docroot/modules/custom/rcs_placeholders/config/install/core.entity_form_display.node.rcs_product.default.yml
+++ b/docroot/modules/custom/rcs_placeholders/config/install/core.entity_form_display.node.rcs_product.default.yml
@@ -70,7 +70,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     region: content
+  field_product_slug:
+    type: string_textfield
+    weight: 12
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: { }
 hidden:
   body: true
   field_metatags: true
-  field_product_slug: true
