CORE-00: Deploy brand rollout branch.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
       - uat
       - master
       - develop-hello-member
+      - develop-brand-rollout
   create:
 
 concurrency: deploy-${{ github.ref }}
