CORE-000: Fixing merge conflicts.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,7 @@ on:
       - master
       - develop-hello-member
       - develop-cross-border
+      - develop-brand-rollout
   create:
 
 concurrency: deploy-${{ github.ref }}
